refactor: [FFBV-94] 금융상품 필터링 시 type, fSector 단일 -> 복수 선택으로 수정